Added Style Sheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello
+
+
+<!-- index.html -->
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title> Kelsey Gilchrist </title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="website.css" />
+</head>
+
+<body>
+	Hello
+
+</body>
+</html>
