--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 </head>
 
 <body>
+
+	<header>
+		Kelsey Gilchrist
+
+	</header>
 	Hello
 
 </body>
+
+
+	<p> <img src="grad1.jpg" alt="My picture"> </p>
+
 </html>
