--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </body>
 
 
-	<p> <img src="grad1.jpg" alt="My picture"> </p>
+	<p> <img src="grad1.jpg" width="200" height="200" alt="My picture" /> </p>
 
 </html>
