--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 
 </body>
 
+<div id="main pic">
 
 	<p> <img src="grad1.jpg" alt="My picture" /> </p>
 
+</div>
+
 	<p> <a href="../resume.html">Resume</a> </p>
+
+	<p> <a href="../bio.html">Biography</a> </p>
 
 </html>
