--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
 		Kelsey Gilchrist
 
 	</header>
-	Hello
+
+	<div id="subheader">
+
+		<p> <a href="../resume.html">Resume</a>
+
+		<a href="../bio.html">Biography</a> </p>
+
+	</div>
+
+	<div id="centerimg">
+
+		<p> <img src="grad1.jpg" alt="My picture" /> </p>
+
+	</div>
 
 </body>
 
-<div id="mainpic">
 
-	<p> <img src="grad1.jpg" alt="My picture" /> </p>
 
-</div>
 
-	<p> <a href="../resume.html">Resume</a> </p>
-
-	<p> <a href="../bio.html">Biography</a> </p>
 
 </html>
