--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body>
 
 	<header>
+
 		Kelsey Gilchrist
 
 	</header>
+
 
 	<div id="subheader">
 
@@ -27,9 +29,15 @@
 
 	</div>
 
-	<div id="centerimg">
 
-		<p> <img src="grad1.jpg" alt="My picture" /> </p>
+		<p> <img src="grad1.jpg" alt="My picture" class="center"/> </p>
+
+
+	<div class ="footer">
+
+	<p> <a href="../index.html">Home</a>
+	<a href="../resume.html">Resume</a>
+	<a href="../bio.html">Biography</a> </p>
 
 	</div>
 
