--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,59 @@
-Resume
+<!DOCTYPE html>
+
+
+
+Education. Do not list high school as it is not important.
+Relevant Coursework
+Professional Experience. For each job, list accomplishments. Use the past-tense if you no longer work at the job; in the present-tense if you are currently employed at the job. Use bullets-points, an unordered list.
+Skills (e.g., programming languages)
+Activities that are related to your field of study or work
+
+
+
+<html>
+
+<head>
+	<title> Resume </title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="website.css" />
+</head>
+
+<body>
+
+	<header>
+		Kelsey Gilchrist
+
+	</header>
+
+
+	<class ="subtitle"> Education </class>
+
+	<class ="subtitle"> Relevant Coursework </class>
+
+	<class ="subtitle"> Professional Experience </class>
+
+	<class ="subtitle"> Skills </class>
+
+	<class ="subtitle"> Activities </class>
+
+
+	</div>
+
+
+
+	<div class ="footer">
+
+	<p> <a href="../index.html">Home</a>
+	<a href="../resume.html">Resume</a>
+	<a href="../bio.html">Biography</a> </p>
+
+	</div>
+
+
+</body>
+
+
+
+
+
+</html>
