--- a/resume.html
+++ b/resume.html
@@ -25,21 +25,37 @@ Activities that are related to your field of study or work
 
 	</header>
 
+	<div id ="content">
 
-	<class ="subtitle"> Education </class>
+	<class ="subtitle"> EDUCATION </class>
 
-	<class ="subtitle"> Relevant Coursework </class>
+	<class ="subtitle"> Tufts University</class>, Medford, MA
+	Bachelor of Science in Biology, expected May 2015
+	Minor: Computer Science
+	GPA: 3.90, Dean's List 2011-2015
+	<class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012
 
-	<class ="subtitle"> Professional Experience </class>
+	<class ="subtitle"> IAU College</class>, Aix-en-Provence, France
 
-	<class ="subtitle"> Skills </class>
+	<class ="subtitle"> RELEVANT COURSEWORK </class>
 
-	<class ="subtitle"> Activities </class>
 
+	<class ="subtitle"> RESEARCH </class>
+
+	<ul>
+
+	<class ="subtitle"> <li> Genzyme Internship Program </li> </class>, Researcher, Bone and Joint Research,
+	<p>May 2014 - August 2014 </p>
+
+	</ul>
+
+	<class ="subtitle"> HEALTH EXPERIENCE </class>
+
+	<class ="subtitle"> EMPLOYMENT </class>
+
+	<class ="subtitle"> SKILLS & INTERESTS </class>
 
 	</div>
-
-
 
 	<div class ="footer">
 
