--- a/resume.html
+++ b/resume.html
@@ -27,33 +27,33 @@ Activities that are related to your field of study or work
 
 	<div id ="content">
 
-	<class ="subtitle"> EDUCATION </class>
+	<class ="subtitle"> <p> EDUCATION </p> </class>
 
-	<class ="subtitle"> Tufts University</class>, Medford, MA
-	Bachelor of Science in Biology, expected May 2015
-	Minor: Computer Science
-	GPA: 3.90, Dean's List 2011-2015
-	<class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012
+	<p> <class ="subtitle"> Tufts University</class>, Medford, MA </p>
+	<p> Bachelor of Science in Biology, expected May 2015 </p>
+	<p> Minor: Computer Science </p>
+	<p> GPA: 3.90, Dean's List 2011-2015 </p>
+	<p> <class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </p>
 
-	<class ="subtitle"> IAU College</class>, Aix-en-Provence, France
+	<p> <class ="subtitle"> IAU College</class>, Aix-en-Provence, France </p>
 
-	<class ="subtitle"> RELEVANT COURSEWORK </class>
+	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
 
 
-	<class ="subtitle"> RESEARCH </class>
+	<p> <class ="subtitle"> RESEARCH </class> </p>
 
 	<ul>
 
-	<class ="subtitle"> <li> Genzyme Internship Program </li> </class>, Researcher, Bone and Joint Research,
+	<p> <class ="subtitle"> <li> Genzyme Internship Program </li> </class>, Researcher, Bone and Joint Research, </p>
 	<p>May 2014 - August 2014 </p>
 
 	</ul>
 
-	<class ="subtitle"> HEALTH EXPERIENCE </class>
+	<p> <class ="subtitle"> HEALTH EXPERIENCE </class> </p>
 
-	<class ="subtitle"> EMPLOYMENT </class>
+	<p> <class ="subtitle"> EMPLOYMENT </class> </p>
 
-	<class ="subtitle"> SKILLS & INTERESTS </class>
+	<p> <class ="subtitle"> SKILLS & INTERESTS </class> </p>
 
 	</div>
 
