--- a/resume.html
+++ b/resume.html
@@ -27,15 +27,21 @@ Activities that are related to your field of study or work
 
 	<div id ="content">
 
-	<class ="subtitle"> <p> EDUCATION </p> </class>
+	<dl>
 
-	<p> <class ="subtitle"> Tufts University</class>, Medford, MA </p>
-	<p> Bachelor of Science in Biology, expected May 2015 </p>
-	<p> Minor: Computer Science </p>
-	<p> GPA: 3.90, Dean's List 2011-2015 </p>
-	<p> <class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </p>
+	<class ="subtitle"> <dt> EDUCATION </dt> </class>
+
+	<dt> <class ="subtitle"> Tufts University</class>, Medford, MA </dt>
+	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
+	<dt> Minor: Computer Science </dt>
+	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
+	<dt> <class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
+
+	</dl>
+
 
 	<p> <class ="subtitle"> IAU College</class>, Aix-en-Provence, France </p>
+
 
 	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
 
@@ -44,8 +50,8 @@ Activities that are related to your field of study or work
 
 	<ul>
 
-	<p> <class ="subtitle"> <li> Genzyme Internship Program </li> </class>, Researcher, Bone and Joint Research, </p>
-	<p>May 2014 - August 2014 </p>
+	<p> <class ="subtitle"> <li> Genzyme Internship Program </class>, Researcher, Bone and Joint Research, </p>
+	<p>May 2014 - August 2014 </li>  </p>
 
 	</ul>
 
