--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-
+<!--
 
 Education. Do not list high school as it is not important.
 Relevant Coursework
@@ -8,7 +8,7 @@ Professional Experience. For each job, list accomplishments. Use the past-tense 
 Skills (e.g., programming languages)
 Activities that are related to your field of study or work
 
-
+-->
 
 <html>
 
@@ -42,16 +42,18 @@ Activities that are related to your field of study or work
 
 	<p> <class ="subtitle"> IAU College</class>, Aix-en-Provence, France </p>
 
-
+	<ul>
 	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
+	<li> Web Programming </li>
+	
 
+	</ul>
 
 	<p> <class ="subtitle"> RESEARCH </class> </p>
 
 	<ul>
 
-	<p> <class ="subtitle"> <li> Genzyme Internship Program </class>, Researcher, Bone and Joint Research, </p>
-	<p>May 2014 - August 2014 </li>  </p>
+	<class ="subtitle"> <li> Genzyme Internship Program </class>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
 
 	</ul>
 
