--- a/resume.html
+++ b/resume.html
@@ -45,11 +45,11 @@ Activities that are related to your field of study or work
 	<ul>
 	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
 	<li> Web Programming </li>
-	
+
 
 	</ul>
 
-	<p> <class ="subtitle"> RESEARCH </class> </p>
+	<class ="subtitle"> <p> RESEARCH </p> </class> 
 
 	<ul>
 
