--- a/resume.html
+++ b/resume.html
@@ -30,13 +30,13 @@ Activities that are related to your field of study or work
 	<dl>
 
 	<class ="subtitle"> <dt> EDUCATION </dt> </class>
-<ul>
 	<dt> <class ="subtitle"> Tufts University</class>, Medford, MA </dt>
+	<ul>
 	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
 	<dt> Minor: Computer Science </dt>
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
 	<dt> <class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
-</ul>
+	</ul>
 	</dl>
 
 
@@ -46,6 +46,7 @@ Activities that are related to your field of study or work
 	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
 	<ul>
 	<li> Web Programming </li>
+	<li> Algorithms </li>
 
 
 	</ul>
