--- a/resume.html
+++ b/resume.html
@@ -29,8 +29,8 @@ Activities that are related to your field of study or work
 
 	<dl>
 
-	<class ="subtitle"> <dt> EDUCATION </dt> </class>
-	<dt> <class ="subtitle"> Tufts University</class>, Medford, MA </dt>
+	<span class ="subtitle"> <dt> EDUCATION </dt> </span>
+	<dt> <span class ="subtitle"> Tufts University</span>, Medford, MA </dt>
 
 	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
 	<dt> Minor: Computer Science </dt>
