--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,8 @@ Activities that are related to your field of study or work
 
 <head>
 	<title> Resume </title>
-	<meta charset="utf-8" />
+	 <!-- <meta charset="utf-8" /> 
+-->
 	<link rel="stylesheet" href="website.css" />
 </head>
 
