--- a/resume.html
+++ b/resume.html
@@ -31,20 +31,20 @@ Activities that are related to your field of study or work
 	<dl>
 
 	<span class ="subtitle"> <dt> EDUCATION </dt> </span>
-	<dt> <span class ="subtitle"> Tufts University</span>, Medford, MA </dt>
+	<dt> <span class ="stress"> Tufts University</span>, Medford, MA </dt>
 
 	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
 	<dt> Minor: Computer Science </dt>
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
-	<dt> <class ="subtitle"> Honors:</class> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
+	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
 
 	</dl>
 
 
-	<p> <class ="subtitle"> IAU College</class>, Aix-en-Provence, France </p>
+	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
 
 	
-	<p> <class ="subtitle"> RELEVANT COURSEWORK </class> </p>
+	<p> <span class ="subtitle"> RELEVANT COURSEWORK </span> </p>
 	<ul>
 	<li> Web Programming </li>
 	<li> Algorithms </li>
@@ -52,19 +52,19 @@ Activities that are related to your field of study or work
 
 	</ul>
 
-	<class ="subtitle"> <p> RESEARCH </p> </class> 
+	<span class ="subtitle"> <p> RESEARCH </p> </span> 
 
 	<ul>
 
-	<class ="subtitle"> <li> Genzyme Internship Program </class>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
+	<span class ="stress"> <li> Genzyme Internship Program </span>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
 
 	</ul>
 
-	<p> <class ="subtitle"> HEALTH EXPERIENCE </class> </p>
+	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </p>
 
-	<p> <class ="subtitle"> EMPLOYMENT </class> </p>
+	<p> <span class ="subtitle"> EMPLOYMENT </span> </p>
 
-	<p> <class ="subtitle"> SKILLS & INTERESTS </class> </p>
+	<p> <span class ="subtitle"> SKILLS & INTERESTS </span> </p>
 
 	</div>
 
