--- a/resume.html
+++ b/resume.html
@@ -52,11 +52,14 @@ Activities that are related to your field of study or work
 
 	</ul>
 
-	<span class ="subtitle"> <p> RESEARCH </p> </span> 
+	<dl>
+
+	<span class ="subtitle"> <dt> RESEARCH </dt></span> 
 
 	<ul>
 
-	<span class ="stress"> <li> Genzyme Internship Program </span>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
+	<li> <span class ="stress"> Genzyme Internship Program</span>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
+	<li> <span class ="stress"> Tufts Summer Scholars Program </span>
 
 	</ul>
 
