Spaces after title

--- a/resume.html
+++ b/resume.html
@@ -38,13 +38,13 @@ Activities that are related to your field of study or work
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
 	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
 
-	</dl>
+	
 
 
-	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
+	<dt> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </dt>
 
 	
-	<p> <span class ="subtitle"> RELEVANT COURSEWORK </span> </p>
+	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> </dt>
 	<ul>
 	<li> Web Programming </li>
 	<li> Algorithms </li>
@@ -52,7 +52,6 @@ Activities that are related to your field of study or work
 
 	</ul>
 
-	<dl>
 	<ul>
 
 	<span class ="subtitle"> <dt> RESEARCH </dt></span> 
@@ -65,13 +64,22 @@ Activities that are related to your field of study or work
 
 	</ul>
 
-	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </p>
+	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
 
-	<p> <span class ="subtitle"> EMPLOYMENT </span> </p>
+	<dt> <span class ="subtitle"> EMPLOYMENT </span> </dt>
 
-	<p> <span class ="subtitle"> SKILLS & INTERESTS </span> </p>
+	<dt> <span class ="subtitle"> SKILLS & INTERESTS </span> </dt>
+
+
+	</dl>
 
 	</div>
+
+
+
+
+
+
 
 	<div class ="footer">
 
