--- a/resume.html
+++ b/resume.html
@@ -43,11 +43,15 @@ Activities that are related to your field of study or work
 
 	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
 
-	
-	<p> <span class ="subtitle"> RELEVANT COURSEWORK </span> </p>
 	<ul>
+	<span class ="subtitle"> RELEVANT COURSEWORK </span> 
+	
 	<li> Web Programming </li>
 	<li> Algorithms </li>
+	<li> Machine Structure and Programming Languages </li>
+	<li> Computational Biology </li>
+	<li> Discrete Mathematics </li>
+	<li> Data Structures </li>
 
 	</ul>
 
@@ -63,7 +67,6 @@ Activities that are related to your field of study or work
 	<li> <span class ="stress"> Tufts Summer Scholars Program </span> </li>
 
 	</ul>
-
 	</dl>
 
 	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
