--- a/resume.html
+++ b/resume.html
@@ -38,14 +38,14 @@ Activities that are related to your field of study or work
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
 	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
 
-	</dl>
+	
 
 
 	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
 
-	<ul>
-	<span class ="subtitle"> RELEVANT COURSEWORK </span> 
 	
+	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> </dt>
+	<ul>
 	<li> Web Programming </li>
 	<li> Algorithms </li>
 	<li> Machine Structure and Programming Languages </li>
@@ -55,7 +55,6 @@ Activities that are related to your field of study or work
 
 	</ul>
 
-	<dl>
 	<ul>
 
 	<span class ="subtitle"> <dt> RESEARCH </dt></span> 
@@ -67,7 +66,6 @@ Activities that are related to your field of study or work
 	<li> <span class ="stress"> Tufts Summer Scholars Program </span> </li>
 
 	</ul>
-	</dl>
 
 	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
 
@@ -75,7 +73,7 @@ Activities that are related to your field of study or work
 
 	<dt> <span class ="subtitle"> SKILLS & INTERESTS </span> </dt>
 
-
+	</dl>
 	
 
 	</div>
