--- a/resume.html
+++ b/resume.html
@@ -44,8 +44,8 @@ Activities that are related to your field of study or work
 	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
 
 	
-	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> </dt>
-	<ul>
+	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> 
+	<ul> 
 	<li> Web Programming </li>
 	<li> Algorithms </li>
 	<li> Machine Structure and Programming Languages </li>
@@ -55,15 +55,25 @@ Activities that are related to your field of study or work
 
 	</ul>
 
+	</dt>
+
+	<span class ="subtitle"> <dt> RESEARCH </dt> </span> 
+
 	<ul>
 
-	<span class ="subtitle"> <dt> RESEARCH </dt></span> 
+	<li> <span class ="stress"> Genzyme Internship Program</span>, <span class ="italics"> Researcher</span>, Bone and Joint Research, May 2014 - August 2014 
+	<ul>
+	<li> Developed and conducted cell-based proliferation, migration, and invasion assays to rate compounds' inhibition of angiogenesis </li>
+	<li> Analyzed GAG and DNA content of cells and cartilage explants, measured
+	MMP production, measured RTK phosphorylation, created cell pellets </li>
+
+</ul>
+</li> 
 
 
 
-	<li> <span class ="stress"> Genzyme Internship Program</span>, Researcher, Bone and Joint Research, May 2014 - August 2014 </li> 
 
-	<li> <span class ="stress"> Tufts Summer Scholars Program </span> </li>
+	<li> <span class ="stress"> Tufts Summer Scholars Program </span> <span class ="italics"> </li>
 
 	</ul>
 
