--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@ Activities that are related to your field of study or work
 
 	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
 
-	
+	<dl>
 	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> 
 	<ul> 
 	<li> Web Programming </li>
@@ -57,25 +57,31 @@ Activities that are related to your field of study or work
 
 	</dt>
 
-	<span class ="subtitle"> <dt> RESEARCH </dt> </span> 
+	</dl>
 
+	<dt>  <span class ="subtitle"> RESEARCH </span> 
 	<ul>
-
-	<li> <span class ="stress"> Genzyme Internship Program</span>, <span class ="italics"> Researcher</span>, Bone and Joint Research, May 2014 - August 2014 
-	<ul>
-	<li> Developed and conducted cell-based proliferation, migration, and invasion assays to rate compounds' inhibition of angiogenesis </li>
-	<li> Analyzed GAG and DNA content of cells and cartilage explants, measured
-	MMP production, measured RTK phosphorylation, created cell pellets </li>
-
-</ul>
-</li> 
-
-
-
-
-	<li> <span class ="stress"> Tufts Summer Scholars Program </span> <span class ="italics"> </li>
-
+	<li> <span class ="stress"> Genzyme Internship Program,</span> <span class ="italics"> Researcher,</span> Bone and Joint Research, May 2014 - August 2014 
+		<ul>
+			<li> Developed and conducted cell-based proliferation, migration, and invasion assays to rate compounds' inhibition of angiogenesis </li>
+			<li> Analyzed GAG and DNA content of cells and cartilage explants, measured
+			MMP production, measured RTK phosphorylation, created cell pellets </li>
+		</ul>
+	</li> 
+	<li> <span class ="stress"> Tufts Summer Scholars Program,</span> <span class ="italics">Researcher,</span> Professor Yee's Biochemistry Lab, June 2013 - May 2014
+		<ul>
+			<li> Analyzed impact of EGCG/DAC treatment on the signaling and metabolic pathways of TNBC tumors and the number of metastases </li>
+			<li> Extracted proteins and RNA from tumors, ran qPCR and Western blots, performed cell culture, and analyzed changes in protein and cDNA expression </li>
+		</ul>
+	</li> 
+	<li> <span class ="stress"> Obesity Project, </span> <span class ="italics">Researcher,</span> Office of Dr. Wayne Altman, MD, Arlington, MA, March 2012 - May 2014
+		<ul>
+			<li> Organized data from 150 patients participating in obesity wellness  </li>
+			<li> Conducted extensive research about factors contributing to obesity </li>
+		</ul>
+	</li> 
 	</ul>
+	</dt> 
 
 	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
 
