--- a/resume.html
+++ b/resume.html
@@ -52,14 +52,11 @@ Activities that are related to your field of study or work
 	<li> Computational Biology </li>
 	<li> Discrete Mathematics </li>
 	<li> Data Structures </li>
-
 	</ul>
-
 	</dt>
-
 	</dl>
 
-	<dt>  <span class ="subtitle"> RESEARCH </span> 
+	<dt> <span class ="subtitle"> RESEARCH </span> </dt>
 	<ul>
 	<li> <span class ="stress"> Genzyme Internship Program,</span> <span class ="italics"> Researcher,</span> Bone and Joint Research, May 2014 - August 2014 
 		<ul>
@@ -83,9 +80,26 @@ Activities that are related to your field of study or work
 	</ul>
 	</dt> 
 
-	 <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
+	<dt> <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
+	<ul>
+	<li> <span class ="stress"> Massachusetts Eye and Ear Infirmary,</span> <span class ="italics"> Surgical Center Volunteer,</span> Boston, MA, January - May 2013 
+		<ul>
+			<li> Dressed surgical beds, restocked supplies, and conducted chart work </li>
+		</ul>
+	</li> 
+	<li> <span class ="stress"> Peer Health Exchange,</span> <span class ="italics"> Senior Health Educator, Health Educator,</span> Tufts University, January - May 2013 
+		<ul>
+			<li> Taught free health workshops to ninth graders in Boston public high schools </li>
+			<li> Trained in public speaking and classroom management techniques </li>
+		</ul>
+	</li> 
 
 	<dt> <span class ="subtitle"> EMPLOYMENT </span> </dt>
+	<ul>
+	<li> Biology and Chemistry Tutor, Academic Resource Center at Tufts University, January 2013 - Present </li>
+	<li> Introduction to Computer Science Teaching Assistant, Department of Computer Science at Tufts University, January 2015 - Present </li>
+	<li> Tutor of English to Inner Mongolia high school students, Inner Mongolia, 2012 </li>
+	</ul>
 
 	<dt> <span class ="subtitle"> SKILLS & INTERESTS </span> </dt>
 
