--- a/resume.html
+++ b/resume.html
@@ -103,6 +103,11 @@ Activities that are related to your field of study or work
 	</ul>
 
 	<dt> <span class ="subtitle"> SKILLS & INTERESTS </span> </dt>
+	<ul>
+	<li> C, C++, HTML, Quickbooks, and Image J </li>
+	<li> Proficient French, conversational Mandarin </li>
+	<li> Tufts Marathon Team, golf, hiking, photography, traveling </li>
+	</ul>
 
 	</dl>
 	
