--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@ Activities that are related to your field of study or work
 
 	<dl>
 
-	<span class ="subtitle"> <dt> EDUCATION </dt> </span>
+	<dt> <span class ="subtitle"> EDUCATION </span> </dt> 
 	<dt> <span class ="stress"> Tufts University</span>, Medford, MA </dt>
 
 	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
@@ -41,10 +41,11 @@ Activities that are related to your field of study or work
 	
 
 
-	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
+	<dt> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </dt>
+	</dl>
 
-	<dl>
-	<dt> <span class ="subtitle"> RELEVANT COURSEWORK </span> 
+
+	<span class ="subtitle"> RELEVANT COURSEWORK </span> 
 	<ul> 
 	<li> Web Programming </li>
 	<li> Algorithms </li>
@@ -53,10 +54,9 @@ Activities that are related to your field of study or work
 	<li> Discrete Mathematics </li>
 	<li> Data Structures </li>
 	</ul>
-	</dt>
-	</dl>
 
-	<dt> <span class ="subtitle"> RESEARCH </span> </dt>
+
+	<span class ="subtitle"> RESEARCH </span>
 	<ul>
 	<li> <span class ="stress"> Genzyme Internship Program,</span> <span class ="italics"> Researcher,</span> Bone and Joint Research, May 2014 - August 2014 
 		<ul>
@@ -78,9 +78,9 @@ Activities that are related to your field of study or work
 		</ul>
 	</li> 
 	</ul>
-	</dt> 
 
-	<dt> <span class ="subtitle"> HEALTH EXPERIENCE </span> </dt>
+
+	<span class ="subtitle"> HEALTH EXPERIENCE </span>
 	<ul>
 	<li> <span class ="stress"> Massachusetts Eye and Ear Infirmary,</span> <span class ="italics"> Surgical Center Volunteer,</span> Boston, MA, January - May 2013 
 		<ul>
@@ -95,21 +95,21 @@ Activities that are related to your field of study or work
 	</li> 
 	</ul>
 
-	<dt> <span class ="subtitle"> EMPLOYMENT </span> </dt>
+	<span class ="subtitle"> EMPLOYMENT </span> 
 	<ul>
 	<li> Biology and Chemistry Tutor, Academic Resource Center at Tufts University, January 2013 - Present </li>
 	<li> Introduction to Computer Science Teaching Assistant, Department of Computer Science at Tufts University, January 2015 - Present </li>
 	<li> Tutor of English to Inner Mongolia high school students, Inner Mongolia, 2012 </li>
 	</ul>
 
-	<dt> <span class ="subtitle"> SKILLS & INTERESTS </span> </dt>
+	<span class ="subtitle"> SKILLS & INTERESTS </span> 
 	<ul>
 	<li> C, C++, HTML, Quickbooks, and Image J </li>
 	<li> Proficient French, conversational Mandarin </li>
 	<li> Tufts Marathon Team, golf, hiking, photography, traveling </li>
 	</ul>
 
-	</dl>
+	
 	
 
 	</div>
