--- a/resume.html
+++ b/resume.html
@@ -37,12 +37,12 @@ Activities that are related to your field of study or work
 	<dt> Minor: Computer Science </dt>
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
 	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
-
+	</dl>
 	
 
 
-	<dt> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </dt>
-	</dl>
+	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
+	
 
 
 	<span class ="subtitle"> RELEVANT COURSEWORK </span> 
