--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@ Activities that are related to your field of study or work
 	<dt> <span class ="stress"> Tufts University</span>, Medford, MA </dt>
 
 	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
-	<dt> Minor: Computer Science </dt>
+	<dd> Minor: Computer Science </dt>
 	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
 	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
 	</dl>
