--- a/resume.html
+++ b/resume.html
@@ -28,16 +28,16 @@ Activities that are related to your field of study or work
 
 	<div id ="content">
 
-	<dl>
+	<ul style="list-style-type:none">
 
-	<dt> <span class ="subtitle"> EDUCATION </span> </dt> 
-	<dt> <span class ="stress"> Tufts University</span>, Medford, MA </dt>
+	<li> <span class ="subtitle"> EDUCATION </span> </li> 
+	<li> <span class ="stress"> Tufts University</span>, Medford, MA </li>
 
-	<dt> Bachelor of Science in Biology, expected May 2015 </dt>
-	<dd> Minor: Computer Science </dd>
-	<dt> GPA: 3.90, Dean's List 2011-2015 </dt>
-	<dt> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </dt>
-	</dl>
+	<li> Bachelor of Science in Biology, expected May 2015 </li>
+	<li> Minor: Computer Science </li>
+	<li> GPA: 3.90, Dean's List 2011-2015 </li>
+	<li> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </li>
+	</ul>
 	
 
 
