--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@ Activities that are related to your field of study or work
 
 	<ul style="list-style-type:none">
 
-	<li> <span class ="subtitle"> EDUCATION </span> </li> 
+	<span class ="subtitle"> EDUCATION </span> 
 	<li> <span class ="stress"> Tufts University</span>, Medford, MA </li>
 
 	<li> Bachelor of Science in Biology, expected May 2015 </li>
