--- a/resume.html
+++ b/resume.html
@@ -38,12 +38,9 @@ Activities that are related to your field of study or work
 	<li> Minor: Computer Science </li>
 	<li> GPA: 3.90, Dean's List 2011-2015 </li>
 	<li> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </li>
+	
+	<li><span class ="stress"> IAU College</span>, Aix-en-Provence, France </li>
 	</ul>
-	
-
-
-	<p> <span class ="stress"> IAU College</span>, Aix-en-Provence, France </p>
-	
 
 
 	<span class ="subtitle"> RELEVANT COURSEWORK </span> 
