--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@ Activities that are related to your field of study or work
 	<li> Minor: Computer Science </li>
 	<li> GPA: 3.90, Dean's List 2011-2015 </li>
 	<li> <span class ="stress"> Honors:</span> Neuebauer Scholar, Anna Quincy Churchill Prize in General Biology 2012 </li>
-	<li> </li>
+	<p> &nbsp; </p>
 	<li><span class ="stress"> IAU College</span>, Aix-en-Provence, France </li>
 	</ul>
 
@@ -120,8 +120,8 @@ Activities that are related to your field of study or work
 
 	<div class ="footer">
 
-	<p> <a href="../index.html">Home</a>
-	<a href="../resume.html">Resume</a>
+	<p> <a href="../index.html">Home</a> &nbsp; &nbsp;
+	<a href="../resume.html">Resume</a> &nbsp; &nbsp;
 	<a href="../bio.html">Biography</a> </p>
 
 	</div>
