--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 
 <!--
-
-Education. Do not list high school as it is not important.
-Relevant Coursework
-Professional Experience. For each job, list accomplishments. Use the past-tense if you no longer work at the job; in the present-tense if you are currently employed at the job. Use bullets-points, an unordered list.
-Skills (e.g., programming languages)
-Activities that are related to your field of study or work
-
+resume.html
+Kelsey Gilchrist
+2/12/15
 -->
 
 <html>
