--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 
 
-<!-- index.html -->
+<!--
+index.html
+Kelsey Gilchrist
+2/12/15
+-->
 
 
 <!DOCTYPE html>
@@ -8,7 +12,6 @@
 
 <head>
 	<title> Kelsey Gilchrist </title>
-	<meta charset="utf-8" />
 	<link rel="stylesheet" href="website.css" />
 </head>
 
@@ -23,7 +26,7 @@
 
 	<div id="subheader">
 
-		<p> <a href="../resume.html">Resume</a>
+		<p> <a href="../resume.html">Resume</a> &nbsp; &nbsp;
 
 		<a href="../bio.html">Biography</a> </p>
 
