--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ Kelsey Gilchrist
 
 		<p> <a href="../resume.html">Resume</a> &nbsp; &nbsp;
 
-		<a href="../bio.html">Biography</a> </p>
+		<a href="../bio.html">Biography</a> &nbsp; &nbsp;
+		
+		<a href="https://www.linkedin.com/pub/kelsey-gilchrist/55/967/91a">LinkedIn</a> </p>
 
 	</div>
 
