--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@ Kelsey Gilchrist
 	<div class ="footer">
 
 	<p> <a href="../index.html">Home</a> &nbsp; &nbsp;
-	<a href="../bio.html">Biography</a> </p> &nbsp; &nbsp;
+	<a href="../bio.html">Biography</a> &nbsp; &nbsp;
 	<a href="https://www.linkedin.com/pub/kelsey-gilchrist/55/967/91a">LinkedIn</a> </p>
 
 	</div>
