--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Kelsey Gilchrist
 	<link rel="stylesheet" href="website.css" />
 </head>
 
-<body>
+<body class="color">
 
 	<header>
 
@@ -29,7 +29,7 @@ Kelsey Gilchrist
 		<p> <a href="../resume.html">Resume</a> &nbsp; &nbsp;
 
 		<a href="../bio.html">Biography</a> &nbsp; &nbsp;
-		
+
 		<a href="https://www.linkedin.com/pub/kelsey-gilchrist/55/967/91a">LinkedIn</a> </p>
 
 	</div>
