--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 
-
-<!--
-index.html
-Kelsey Gilchrist
-2/12/15
--->
-
-
 <!DOCTYPE html>
+
+<!--index.html
+Kelsey Gilchrist
+2/12/15-->
+
 <html>
 
 <head>
