--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,9 @@ Kelsey Gilchrist
 	<li> Bachelor of Science in Biology, expected May 2015 </li>
 	<li> Minor: Computer Science </li>
 	<li> GPA: 3.90, Dean's List 2011-2015 </li>
-	<li> <span class ="stress"> Honors:</span> Neubauer Scholar, Anna Quincy Churchill Prize in General Biology 2012, Phi Beta Kappa Delta Chapter of Massachusetts </li>
+	<li> <span class ="stress"> Honors:</span> Neubauer Scholar, Anna Quincy Churchill Prize in General Biology 2012, </li>
+	<li> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+	Phi Beta Kappa Delta Chapter of Massachusetts </li>
 	<li><p> </p></li>
 	<li><span class ="stress"> IAU College</span>, Aix-en-Provence, France </li>
 	</ul>
